Fixed link highlight on mobile and added script for analytics

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -56,9 +56,6 @@ a.playlist {
     -webkit-transition: .2s;
     transition: .2s;
 }
-a.platlist:hover {
-    color: hotPink;
-}
 
 @media (-webkit-min-device-pixel-ratio:0) {
     a.playlist {
@@ -77,4 +74,8 @@ a.platlist:hover {
         color: transparent;
         transition: .4s 0;
     }
+}
+
+a {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
